--- a/index.html
+++ b/index.html
@@ -2,75 +2,186 @@
 <html>
 
 <head>
-  <meta charset="UTF-8">
-  <title>Hello World!</title>
-  <style>
-    #hello,#str-length{
-      color: #ff0000;
-    }
-    #plus>input{
-        width: 150px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Hello World!</title>
+    <style>
+        #hello, #str-length {
+            color: #ff0000;
+        }
+
+        #plus > input {
+            width: 150px;
+        }
+    </style>
 </head>
 
 <body>
-  <h3>C++ Dll hello:
+<h3>C++ Dll hello:
     <span id="hello"></span>
-  </h3>
-  
-  <div id='plus'>
+</h3>
+
+<div id='plus'>
     <h3 style="display:inline-block">C++ Function Plus:</h3>
     <input type="text" value="1">+
     <input type="text" value="2">=
     <input type="text">
     <button type="button" onclick="plus()">计算</button>
-  </div>
+    <button type="button" onclick="luobo()">luobo</button>
+    <button type="button" onclick="JavaTabletRemoteController()">JavaTabletRemoteController</button>
+</div>
 
-  <h3>C++ Function strlen() :
+<h3>C++ Function strlen() :
     <span id="str-length">0</span>
     <br>
-    <textarea id="str-input" cols="30" rows="10" onchange="strlen(this)" oninput="strlen(this)" placeholder="Input something"></textarea>
-  </h3>
+    <textarea id="str-input" cols="30" rows="10" onchange="strlen(this)" oninput="strlen(this)"
+              placeholder="Input something"></textarea>
+</h3>
 
-  We are using node
-  <script>document.write(process.versions.node)</script>, Chrome
-  <script>document.write(process.versions.chrome)</script>, and Electron
-  <script>document.write(process.versions.electron)</script>.
+We are using node
+<script>document.write(process.versions.node)</script>
+, Chrome
+<script>document.write(process.versions.chrome)</script>
+, and Electron
+<script>document.write(process.versions.electron)</script>
+.
 
-  <script>
+<script>
     window.onload = function () {
-      try {
-        // Call *.dll with ffi
-        let ffi = require('ffi');
-        // Create funtions
-        window.Dll = ffi.Library('dll/MyDLL.dll', {
-          'Add': ['float', ['float', 'float']],
-          'Hello': ['string', []],
-          'StrLength': ['int', ['string']]
-        })
-        console.log('fii.Library result:',Dll);
-        // Call C++ function Hello
-        document.getElementById('hello').innerHTML = Dll.Hello()
-      } catch (error) {
-        console.error('ffi.Library', error);
-      }
+        try {
+            // Call *.dll with ffi
+            let ffi = require('ffi');
+            // Create funtions
+            window.Dll = ffi.Library('dll/MyDLL.dll', {
+                'Add': ['float', ['float', 'float']],
+                'Hello': ['string', []],
+                'StrLength': ['int', ['string']]
+            })
+            console.log('fii.Library result:', Dll);
+
+            //int rbt_win_config_net(const char *ip, int port, bool mqtt, bool tcp, const char *source = "");
+            //bool rbt_win_send_startanswer(int type, int totalTopic, char* pTopicType, const char* mac = "");
+            window.robotpenetdevice = ffi.Library('dll/robotpenetdevice.dll', {
+                'rbt_win_init': ['bool', ['void**']],
+                'rbt_win_start': ['bool', []],
+                'rbt_win_config_net': ['int', ['string', 'int', 'bool', 'bool', 'string']],
+                'rbt_win_send_startanswer': ['bool', ['int', 'int', 'string', 'string']],
+
+                //回调方法
+                'rbt_win_set_accept_cb': ['void', ['void**']],
+                'rbt_win_set_origindata_cb': ['void', ['void**']],
+            })
+            console.log('robotpenetdevice.Library result:', robotpenetdevice);
+
+            window.TabletRemoteControllerAdapter = ffi.Library('dll/TabletRemoteControllerAdapter.dll', {
+                'Java_com_tal_seg_paperpenclassroom_TabletRemoteController_init': ['int', []],
+                'Java_com_tal_seg_paperpenclassroom_TabletRemoteController_start': ['bool', []],
+                'Java_com_tal_seg_paperpenclassroom_TabletRemoteController_sendStartAnswer': ['bool', ['int', 'int', 'string', 'string']],
+            })
+            console.log('TabletRemoteControllerAdapter.Library result:', TabletRemoteControllerAdapter);
+
+            // Call C++ function Hello
+            document.getElementById('hello').innerHTML = Dll.Hello()
+        } catch (error) {
+            console.error('ffi.Library', error);
+        }
     }
+
     function plus() {
-      let inputs = document.getElementById('plus').getElementsByTagName('input');
-      let a = Number(inputs[1].value), b = Number(inputs[0].value);
-      // Call C++ function Add
-      let sum = Dll.Add(a, b);
-      console.log(`${a}+${b}=${sum}`);
-      inputs[2].value = sum;      
+        let inputs = document.getElementById('plus').getElementsByTagName('input');
+        let a = Number(inputs[1].value), b = Number(inputs[0].value);
+        // Call C++ function Add
+        let sum = Dll.Add(a, b);
+        console.log(`${a}+${b}=${sum}`);
+        inputs[2].value = sum;
     }
+
+    function luobo() {
+        try {
+            // let objectPtr = {};
+
+            // char ip[32]; //本机ip，默认为空
+            // int port;	//监听端口，6001
+            // int listenCount; //最大连接数 默认60
+            // bool open;  //是否打开模组， 默认打开
+            // bool optimize;	//是否输出优化笔记，默认关闭
+            // rbt_win_context* ctx; //上下文指针
+
+            // var ref = require('ref');
+            // var StructType = require('ref-struct');
+            // var MyStruct = StructType();
+            // MyStruct.defineProperty('ip', ref.types.char);
+            // MyStruct.defineProperty('port', ref.types.int);
+            // MyStruct.defineProperty('listenCount', ref.types.int);
+            // MyStruct.defineProperty('open', ref.types.bool);
+            // MyStruct.defineProperty('optimize', ref.types.bool);
+            // var i = new MyStruct();
+
+            // const ref = require('ref')
+            // const Struct = require('ref-struct')
+            // const refArray = require('ref-array')
+            // const _Init_Param = Struct({
+            //   ip: refArray(ref.types.char, 32),
+            //   port: ref.types.int,
+            //   listenCount:  ref.types.int,
+            //   open:  ref.types.bool,
+            //   optimize:  ref.types.bool
+            // })
+            // console.log("_Init_Param:  "+_Init_Param);
+
+
+            var ref = require('ref')
+            var MyStruct = require('ref-struct')
+            const refArray = require('ref-array')
+            let object = ref.types.void
+            let objectPtr =ref.refType(object)
+            var Init_Param = MyStruct({
+                ip: refArray(ref.types.char, 32),
+                port: ref.types.int,
+                listenCount: ref.types.int,
+                open: ref.types.bool,
+                optimize: ref.types.bool,
+                ctx: objectPtr,
+            });
+            // var Init_Param2 = MyStruct();
+            // Init_Param2.defineProperty('ip', ref.types.char);
+            // Init_Param2.defineProperty('port', ref.types.int);
+            // Init_Param2.defineProperty('listenCount', ref.types.int);
+            // Init_Param2.defineProperty('open', ref.types.bool);
+            // Init_Param2.defineProperty('optimize', ref.types.bool);
+            // Init_Param2.defineProperty('ctx', ref.types.void);
+
+            //初始化
+            var _Init_Param = new Init_Param("", 6001, false, true, "");
+            var s = robotpenetdevice.rbt_win_init(_Init_Param);
+            console.log("rbt_win_init  " + s);
+
+            //开始服务
+            var s1 = robotpenetdevice.rbt_win_start();
+            console.log("rbt_win_start  " + s1);
+
+            //robotpenetdevice.rbt_win_config_net("", 6001, false, true, "")
+
+            var ss = robotpenetdevice.rbt_win_send_startanswer(1, 3, "111", "");
+            console.log("rbt_win_send_startanswer  " + ss);
+
+        } catch (e) {
+            console.log(e);
+        }
+    }
+
+    function JavaTabletRemoteController() {
+        TabletRemoteControllerAdapter.Java_com_tal_seg_paperpenclassroom_TabletRemoteController_init();
+        TabletRemoteControllerAdapter.Java_com_tal_seg_paperpenclassroom_TabletRemoteController_start();
+        TabletRemoteControllerAdapter.Java_com_tal_seg_paperpenclassroom_TabletRemoteController_sendStartAnswer(1, 3, "111", "");
+    }
+
 
     function strlen(el) {
-      // Call C++ function StrLength
-      document.getElementById('str-length').innerHTML = Dll.StrLength(el.value);
+        // Call C++ function StrLength
+        document.getElementById('str-length').innerHTML = Dll.StrLength(el.value);
     }
 
-  </script>
+</script>
 </body>
 
 </html>
