--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     <input type="text" value="2">=
     <input type="text">
     <button type="button" onclick="plus()">计算</button>
-    <button type="button" onclick="luobo()">luobo</button>
+    <button type="button" onclick="init()">luobo_init</button>
+    <button type="button" onclick="rbt_win_send_startanswer()">rbt_win_send_startanswer</button>
+
     <button type="button" onclick="JavaTabletRemoteController()">JavaTabletRemoteController</button>
 </div>
 
@@ -46,10 +48,13 @@ We are using node
 .
 
 <script>
+    // Call *.dll with ffi
+    let ffi = require('ffi');
+    var ref = require('ref')
+    var MyStruct = require('ref-struct')
+    const refArray = require('ref-array')
     window.onload = function () {
         try {
-            // Call *.dll with ffi
-            let ffi = require('ffi');
             // Create funtions
             window.Dll = ffi.Library('dll/MyDLL.dll', {
                 'Add': ['float', ['float', 'float']],
@@ -71,17 +76,8 @@ We are using node
                  'rbt_win_set_origindata_cb': ['void', ['pointer']],
             })
 
-             //设备上线回调(rbt_win_context* context, const char* pClientIpAddress);
-            let onAccept = ffi.Callback('void', ['pointer', 'string'], (context, pClientIpAddress) => {
-                console.log('onAccept: context', context, ', pClientIpAddress: ', pClientIpAddress)
-            });
-            //笔迹数据回调 rbt_win_context* ctx, const char* pMac, ushort us, ushort ux, ushort uy, ushort up, unsigned char *buffer, int len
-            let onOriginData = ffi.Callback('void', ['pointer', 'string', 'ushort', 'ushort', 'ushort', 'ushort', 'string', 'int'],
-                (ctx, pMac,us,ux,uy,up,buffer,len) => {
-                console.log('onOriginData: pMac', pMac, ', ux: ', ux)
-            });
-            robotpenetdevice.rbt_win_set_accept_cb(onAccept);
-            robotpenetdevice.rbt_win_set_origindata_cb(onOriginData);
+
+
 
 
             console.log('robotpenetdevice.Library result:', robotpenetdevice);
@@ -109,42 +105,58 @@ We are using node
         inputs[2].value = sum;
     }
 
-    function luobo() {
+    function init() {
         try {
-            var ref = require('ref')
-            var MyStruct = require('ref-struct')
-            const refArray = require('ref-array')
-
-            let object = ref.types.void
-            let objectPtr = ref.refType(object)
-            var Init_Param = MyStruct({
-                ip: refArray(ref.types.char, 32),// char ip[32]; //本机ip，默认为空
-                //ip:  ref.types.string,// char ip[32]; //本机ip，默认为空
-                port: ref.types.int,// int port;	//监听端口，6001
-                listenCount: ref.types.int, // int listenCount; //最大连接数 默认60
-                open: ref.types.bool, // bool open;  //是否打开模组， 默认打开
-                optimize: ref.types.bool, // bool optimize;	//是否输出优化笔记，默认关闭
-                //ctx:  ref.refType('pointer'), // rbt_win_context* ctx; //上下文指针
-                ctx:  objectPtr, // rbt_win_context* ctx; //上下文指针
-            });
-            //初始化
-            //var _Init_Param = new Init_Param({port: 6001,listenCount:60,open:true,optimize:false,ctx: objectPtr.ref()});
-            var _Init_Param = new Init_Param;
-            debugger;
+            // let object = ref.types.void
+            // let objectPtr = ref.refType(object)
+            // var Init_Param = MyStruct({
+            //     //ip: refArray(ref.types.char, 32),// char ip[32]; //本机ip，默认为空
+            //     ip:  ref.types.string,// char ip[32]; //本机ip，默认为空
+            //     port: ref.types.int,// int port;	//监听端口，6001
+            //     listenCount: ref.types.int, // int listenCount; //最大连接数 默认60
+            //     open: ref.types.bool, // bool open;  //是否打开模组， 默认打开
+            //     optimize: ref.types.bool, // bool optimize;	//是否输出优化笔记，默认关闭
+            //     //ctx:  ref.refType('pointer'), // rbt_win_context* ctx; //上下文指针
+            //     ctx:  objectPtr, // rbt_win_context* ctx; //上下文指针
+            // });
+            // //初始化
+            // //var _Init_Param = new Init_Param({port: 6001,listenCount:60,open:true,optimize:false,ctx: objectPtr.ref()});
+            // var param = new Init_Param;
+            // param.ctx = this;
+            // param.port = 6001;
+            // param.open = true;
+            // param.optimize = false;
+            // param.listenCount = 128;
             var s = robotpenetdevice.rbt_win_init();
             console.log("rbt_win_init  " + s);
+
+            //设备上线回调
+            let onAccept = ffi.Callback('void', ['pointer', 'string'], (context, pClientIpAddress) => {
+                console.log('onAccept: context', context, ', pClientIpAddress: ', pClientIpAddress)
+            });
+            //笔迹数据回调
+            let onOriginData = ffi.Callback('void', ['pointer', 'string', 'int', 'int', 'int', 'int', 'string', 'int'], (ctx, pMac,us,ux,uy,up,buffer,len) => {
+                console.log('onOriginData: pMac', pMac, ', ux: ', ux)
+            });
+            console.log('onAccept: context', onAccept)
+            console.log('onOriginData: context', onOriginData)
+            robotpenetdevice.rbt_win_set_accept_cb(onAccept);
+            robotpenetdevice.rbt_win_set_origindata_cb(onOriginData);
 
             //开始服务
             var s1 = robotpenetdevice.rbt_win_start();
             console.log("rbt_win_start  " + s1);
 
-            //开始答题
-            var s3 = robotpenetdevice.rbt_win_send_startanswer(1, 3, "1", "");
-            // var s3 = robotpenetdevice.rbt_win_send_startanswer(1,"1");
-            console.log("rbt_win_send_startanswer  " + s3);
         } catch (e) {
             console.log(e);
         }
+    }
+
+    function rbt_win_send_startanswer() {
+        //开始答题
+        var s3 = robotpenetdevice.rbt_win_send_startanswer(1, 3, "1", "");
+        // var s3 = robotpenetdevice.rbt_win_send_startanswer(1,"1");
+        console.log("rbt_win_send_startanswer  " + s3);
     }
 
     function JavaTabletRemoteController() {
